# youtube-downloader-streamlit

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/: __init__.py  cache.py  downloader.py  gui.py
tests/: test_downloader.py
