[project]
name = "youtube_downloader"
version = "0.1.0"
description = "YouTube video downloader with high-resolution support (Python, pytube)"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
  "pytube>=12.0.0",
  "requests>=2.28.0",
  "Pillow>=9.0.0",
  "streamlit>=1.24.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
